 - Qt: Prevent savestate window from opening while in multiplayer
 - Qt: Disable menu items in multiplayer that don't make sense to have enabled
 - Qt: Dropping multiplayer windows works more cleanly now
 - GBA BIOS: Implement RegisterRamReset for SIO registers
 - GBA: Additional savestate sanity checks
 - GBA: Check for cycle count being too high

0.3.0: (2015-08-16)
Features:
 - Ability to hide individual background layers, or OBJs
 - Ability to mute individual audio channels
 - Palette viewer and exporter
 - Volume control
 - More shortcuts are editable (e.g. quick save/load)
 - Rewind now shows the frame after rewinding
 - Import/Export of GameShark/Action Replay snapshots
 - Add "Step backwards" item for single increment rewind
 - Deadzone estimation for game controllers
 - Analog inputs can be used for shortcuts
 - Menu items for specific solar sensor brightness levels
 - Remappable controls for tilt and gyroscope sensors
 - Status messages for actions taken while a game is running (e.g. save/load state)
 - Memory inspector
 - Screensaver can now be suspended while a game is running
 - Load/save the most recent savestate slot
 - Support varible speed (PWM) rumble
 - Ability to cap fast forward speed
 - Finer control over FPS target
 - Holdable shortcut for rewinding one frame at a time
 - Ability to boot directly into the BIOS
 - Preliminary support for yanking out the game pak while a game is running
 - Thumb-drive mode by putting a file called portable.ini in the same folder
 - Configurable display driver, between software and OpenGL
 - Undo-able savestate loading and saving
 - Controller profiles now store shortcut settings
 - Default controller profiles for several common controllers
 - Libretro now supports BIOS, rumble and solar sensor
 - Implement BIOS call Stop, for sleep mode
 - Automatically load patches, if found
 - Improved video synchronization
 - Configurable audio output sample rate
Bugfixes:
 - ARM7: Fix SWI and IRQ timings