@@ -103,7 +103,7 @@ void ARMDebuggerRun(struct ARMDebugger* debugger) {
 void ARMDebuggerEnter(struct ARMDebugger* debugger, enum DebuggerEntryReason reason, struct DebuggerEntryInfo* info) {
 	debugger->state = DEBUGGER_PAUSED;
 	struct ARMCore* cpu = debugger->cpu;
-	cpu->nextEvent = 0;
+	cpu->nextEvent = cpu->cycles;
 	if (reason == DEBUGGER_ENTER_BREAKPOINT) {
 		struct DebugBreakpoint* breakpoint = _lookupBreakpoint(debugger->swBreakpoints, _ARMPCAddress(cpu));
 		debugger->currentBreakpoint = breakpoint;
