@@ -30,6 +30,7 @@ Misc:
  - GBA BIOS: Implement RegisterRamReset for SIO registers
  - GBA: Additional savestate sanity checks
  - GBA: Check for cycle count being too high
+ - All: Reset next event to cycles instead of zero to interrupt
 
 0.3.0: (2015-08-16)
 Features:
